tests/snapshots/sfc/js/directives__multiple_directive_comments_stripped.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createElementVNode as _createElementVNode, toDisplayString as _toDisplayString } from "vue"

const a = 1
const b = 2

export default {
  __name: 'test',
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, [ _createElementVNode("span", null, _toDisplayString(a)), _createElementVNode("span", null, _toDisplayString(b)) ]))
}
}

}
