tests/snapshots/sfc/js/directives__regular_comments_preserved_with_directives.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { Fragment as _Fragment, openBlock as _openBlock, createElementBlock as _createElementBlock, createElementVNode as _createElementVNode, toDisplayString as _toDisplayString } from "vue"

const msg = 'hi'

export default {
  __name: 'test',
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock(_Fragment, null, [ , _createElementVNode("div", null, _toDisplayString(msg)) ], 64 /* STABLE_FRAGMENT */))
}
}

}
